fix style for collapsed collumn

--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,7 @@
 #board {
   align-self: stretch;
   display: flex;
+  gap: 1rem;
   /* we may have too many columns */
   overflow: auto;
   margin: 1rem 0;
@@ -65,7 +66,6 @@ body[data-theme^="dark"] #new-card-button .icon-img {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  margin-top: 1rem;
   padding: 1rem;
   border: 1px solid;
   border-radius: 0.5rem;
