--- a/src/components/column/column.css
+++ b/src/components/column/column.css
@@ -3,7 +3,6 @@
   flex-shrink: 0;
   flex-basis: 420px;
   max-width: 580px;
-  margin-left: 1.75rem;
   border: 1px solid;
   border-radius: 0.5rem;
   overflow: auto;
@@ -20,20 +19,10 @@ body[data-theme^="dark"] .column {
   border-color: var(--theme-secondary-700);
 }
 
-.column:first-child {
-  margin-left: 0rem;
-}
-
 @media screen and (width <= 580px) {
   .column {
     flex: auto;
-    margin-left: 0;
-    margin-top: 1.75rem;
     overflow: visible;
-  }
-
-  .column:first-child {
-    margin-top: 0rem;
   }
 }
 
@@ -61,14 +50,20 @@ body[data-theme^="dark"] .column {
 /* Collapsed columns */
 
 .column.collapsed button.expand {
-  --button-size: 1.5rem;
-  background-color: var(--theme-section-bg-color);
+  --button-size: 1.25rem;
   order: 1;
 }
 
 .column.collapsed button.expand .icon-img {
   mask-image: url("/icons/expand.svg");
-  background-color: var(--theme-section-text-color);
+}
+
+body[data-theme^="light"] .column.collapsed button.expand .icon-img {
+  background-color: var(--theme-gray-800);
+}
+
+body[data-theme^="dark"] .column.collapsed button.expand .icon-img {
+  background-color: var(--theme-gray-100);
 }
 
 .column.collapsed .menu-component,
@@ -89,7 +84,7 @@ body[data-theme^="dark"] .column {
   .column.collapsed header {
     flex-direction: column;
     align-items: center;
-    gap: 1.05rem;
+    gap: 1rem;
   }
 
   .column.collapsed button.expand {
